AC_INIT([amhello], [1.0], [bug-automake@gnu.org])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
 Makefile
 src/Makefile
])
AC_OUTPUT
dnl Check for SDL SDL_VERSION=1.2.0 AM_PATH_SDL($SDL_VERSION, 
:, AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!]) 

) CFLAGS="$CFLAGS $SDL_CFLAGS" LIBS="$LIBS $SDL_LIBS"